src/objects/CutOff__c.object
<CustomObject>
    <fields>
        <fullName>Confirmed_By__c</fullName>
        <label>Confirmed By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Confirmed_By</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <label>CutOff</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>End__c</columns>
        <columns>Start__c</columns>
        <columns>Confirmed_By__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CO - {00000}</displayFormat>
        <label>CutOff ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CuttOffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>